--- a/petclinic.yaml
+++ b/petclinic.yaml
@@ -8,31 +8,12 @@
         skip-tag: false
         url: https://github.com/drew-holt/spring-petclinic
     triggers:
-      - pollscm: '@hourly'
+      - pollscm: 'H/5 * * * *'
     builders:
-      - shell: |
-          git clean -dxf
-          sloccount --duplicates --wide --details . | fgrep -v .svn > sloccount.sc || :
-          find . -name test\*.py|xargs nosetests --with-xunit --verbose || :
-          find . -name \*.py|egrep -v '^./tests/'|xargs pyflakes  > pyflakes.log || :
-          rm -f pylint.log
-          for f in `find . -name \*.py|egrep -v '^./tests/'`; do
-          pylint --output-format=parseable --reports=y $f >> pylint.log
-          done || :
-          python /usr/local/lib/python2.7/dist-packages/clonedigger/clonedigger.py --cpd-output . || :
+    - maven-target:
+        maven-version: Maven3
+        pom: parent/pom.xml
+        goals: clean install
     publishers:
-      - warnings:
-          workspace-file-scanners:
-            - file-pattern: pyflakes.log
-              scanner: PyFlakes
-      - junit:
-          results: nosetests.xml
-      - sloccount:
-          pattern: sloccount.sc
-      - violations:
-          cpd:
-             pattern: output.xml
-          pylint:
-             pattern: pylint.log
       - email:
-          recipients: devops@mycompany.com
+          recipients: drew@liatrio.com
